--- a/tff/parameters.html
+++ b/tff/parameters.html
@@ -33,7 +33,7 @@ crossorigin>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/336becebb9a7ace335ed66e7836962a247138c24/tff/parameters.py#L1-L19" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/72d650a7389dbf6f30ceefd05b9c858607c559ea/tff/parameters.py#L1-L21" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">&#34;&#34;&#34;
 # Parameters
@@ -53,7 +53,9 @@ NAME = &#34;Text-Fabric-Factory&#34;
 &#34;&#34;&#34;The name of the game: this program.
 &#34;&#34;&#34;
 
-BANNER = f&#34;This is {NAME} {VERSION}&#34;</code></pre>
+BANNER = f&#34;This is {NAME} {VERSION}&#34;
+
+URL_TF_DOCS = &#34;https://annotation.github.io/text-fabric-factory/tff&#34;</code></pre>
 </details>
 </section>
 <section>
