--- a/tff/convert/watm.html
+++ b/tff/convert/watm.html
@@ -509,7 +509,7 @@ information from reaching the WATM.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/336becebb9a7ace335ed66e7836962a247138c24/tff/convert/watm.py#L1-L2793" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/72d650a7389dbf6f30ceefd05b9c858607c559ea/tff/convert/watm.py#L1-L2794" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">&#34;&#34;&#34;Export to Web Annotation Text Model
 
@@ -1002,9 +1002,10 @@ from tf.core.files import (
     APP_CONFIG,
 )
 from tf.core.timestamp import DEEP
-from tf.parameters import OTYPE, OSLOTS, URL_TF_DOCS
+from tf.parameters import OTYPE, OSLOTS
 from tf.app import use
 
+from ..parameters import URL_TF_DOCS
 from .iiif import parseIIIF
 from .helpers import getPageInfo
 
@@ -3498,7 +3499,7 @@ versions in the <code>watm</code> directory.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/336becebb9a7ace335ed66e7836962a247138c24/tff/convert/watm.py#L796-L2640" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/72d650a7389dbf6f30ceefd05b9c858607c559ea/tff/convert/watm.py#L797-L2641" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">class WATM:
     &#34;&#34;&#34;The export machinery is exposed as a class, wrapped around a TF dataset.&#34;&#34;&#34;
@@ -5611,7 +5612,7 @@ See <code><a title="tff.convert.watm.WATM" href="#tff.convert.watm.WATM">WATM</a
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/336becebb9a7ace335ed66e7836962a247138c24/tff/convert/watm.py#L2643-L2793" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/72d650a7389dbf6f30ceefd05b9c858607c559ea/tff/convert/watm.py#L2644-L2794" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">class WATMS:
     &#34;&#34;&#34;Export corpora that are divided over multiple TF datasets.
