--- a/tff/convert/app/index.html
+++ b/tff/convert/app/index.html
@@ -36,6 +36,10 @@ crossorigin>
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="tff.convert.app.static" href="static/index.html">tff.convert.app.static</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 </dl>
 </section>
 <section>
@@ -110,6 +114,7 @@ setTimeout(() => input.focus(), 100);
 <li><h3><a href="#header-submodules">Sub-modules</a></h3>
 <ul>
 <li><code><a title="tff.convert.app.app" href="app.html">tff.convert.app.app</a></code></li>
+<li><code><a title="tff.convert.app.static" href="static/index.html">tff.convert.app.static</a></code></li>
 </ul>
 </li>
 </ul>
